objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>ACV_inop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACV inop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_VCI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned VCI</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Active_Pricing_Recommendations__c</fullName>
        <description>Counts how many pricing recommendations are currently active on the vehicle.</description>
        <label>Count of Active Pricing Recommendations</label>
        <summaryFilterItems>
            <field>Recommended_Price__c.Pricing_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Recommended_Price__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Pricing_Recommendations__c</fullName>
        <description>Counts the amount of pricing recommendations associated with this vehicle.</description>
        <label>Count of Pricing Recommendations</label>
        <summaryForeignKey>Recommended_Price__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IST_Filter_Check__c</fullName>
        <formula>Most_Recent_Seller__r.IST_Account_Owner__c ==  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Filter Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Status__c</fullName>
        <label>Inspection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Assignment</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMR_AutoCheck_URL__c</fullName>
        <description>Link used by Titles team to check vehicle info in MMR.</description>
        <formula>HYPERLINK(&quot;https://m.manheim.com/mobile/vin/summary?vin=&quot; &amp; vin__c &amp; &quot;&amp;mileage=&quot; &amp; TEXT(odometer__c) , &quot;AutoCheck URL&quot;)</formula>
        <label>MMR AutoCheck URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMR__c</fullName>
        <description>Links out to MMR for Vehicle</description>
        <formula>HYPERLINK(&quot;https://mmr.manheim.com/?WT.svl=m_uni_hdr_sell&amp;country=US&amp;mid=200708003280006&amp;popup=true&amp;source=man&amp;vin=&quot; &amp; vin__c &amp; &quot;&amp;mileage=&quot; &amp; TEXT(odometer__c), &quot;View MMR for Vehicle &quot; &amp; vin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Trim__c</fullName>
        <formula>model__c + &quot; &quot; + trim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model+Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Price_Recommendation_Date__c</fullName>
        <description>Displays the date of when the most recent price recommendation was given.</description>
        <label>Most Recent Price Recommendation Date</label>
        <summarizedField>Recommended_Price__c.CreatedDate</summarizedField>
        <summaryForeignKey>Recommended_Price__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Recommended_Price__c</fullName>
        <description>Displays the most recent recommended price for this vehicle.</description>
        <label>Most Recent Recommended Price</label>
        <summarizedField>Recommended_Price__c.Most_Recent_Recommended_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Recommended_Price__c.Pricing_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Recommended_Price__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Date_Added__c</fullName>
        <description>For Commercial Sales Assignment Manager tracking, the date that the Seller added the vehicle for inspection.</description>
        <label>Most Recent Seller Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Date_of_Last_Status__c</fullName>
        <description>For Commercial Sales Assignment Manager tracking</description>
        <label>Most Recent Seller Date of Last Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Floor_Price__c</fullName>
        <description>For Commercial Sales Assignment Manager tracking</description>
        <label>Most Recent Seller Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Lot_Number__c</fullName>
        <description>For Commercial Sales Assignment Manager tracking</description>
        <label>Most Recent Seller Lot Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_SFDC_Id__c</fullName>
        <formula>CASESAFEID(Most_Recent_Seller__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Seller SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Stock_Number__c</fullName>
        <description>For Commercial Sales Assignment Manager tracking</description>
        <label>Most Recent Seller Stock Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Vehicle_Status__c</fullName>
        <label>Most Recent Seller Vehicle Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Inspected - Ready for Launch</fullName>
                </value>
                <value>
                    <fullName>Auction - Sold</fullName>
                </value>
                <value>
                    <fullName>Auction - No Sale</fullName>
                </value>
                <value>
                    <fullName>Auction - No Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller_Yard_Row_Number__c</fullName>
        <description>For Commercial Sales Assignment Manager tracking</description>
        <label>Most Recent Seller Yard/Row Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Seller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Waived__c</fullName>
        <description>Counts the number of times that a pricing manager waived the ability to recommend a price.</description>
        <label>Times Pricing Waived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Seller_Successful_Run_Number__c</fullName>
        <label>Recent Seller Successful Run Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Seller_s_Failed_Runs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many times has the recent seller failed at selling this vehicle when listing it?</description>
        <label>Recent Seller&apos;s Failed Runs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Seller_s_Total_Runs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many times has the recent seller attempted to list this vehicle?</description>
        <label>Recent Seller&apos;s Total Runs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Price_Ceiling__c</fullName>
        <description>Update Vehicle Flow populates field with most recent recommended price ceiling value, given by a pricing manager.</description>
        <label>Recent Recommended Ceiling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recommended_Price_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Price Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Price_Floor__c</fullName>
        <description>Populates with the most recent Price Floor Recommendation made by the pricing manager via the update vehicle flow</description>
        <label>Recent Recommended Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recommended_Price_Status__c</fullName>
        <description>Stamps Recommended Price Status as Active or Expired.</description>
        <label>Recommended Price Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Runs_When_Most_Recently_Priced__c</fullName>
        <label>Runs When Most Recently Priced</label>
        <summarizedField>Recommended_Price__c.Runs_When_Priced__c</summarizedField>
        <summaryForeignKey>Recommended_Price__c.Vehicle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VCI_Assignment_Filter__c</fullName>
        <formula>Assigned_VCI__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VCI Assignment Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Is_Oversize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Is Oversize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model_Trim__c</fullName>
        <description>Concatenated Year Make Model Trim Field</description>
        <formula>TEXT(Year__c) &amp; &quot; &quot; &amp; make__c &amp; &quot; &quot; &amp; model__c &amp; &quot; &quot; &amp; trim__c</formula>
        <label>Year/Make/Model/Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>basic_color__c</fullName>
        <label>Basic Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Basic_Color</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>class_name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created__c</fullName>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cylinders__c</fullName>
        <label>Cylinders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>doors__c</fullName>
        <label>Doors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>drivetrain__c</fullName>
        <label>Drivetrain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Drivetrain</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>engine_description__c</fullName>
        <label>Engine Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fuel_type__c</fullName>
        <label>Fuel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Fuel_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>Vehicle ID</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>make__c</fullName>
        <description>The make (manufacturer) of the vehicle.</description>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mileage_cat__c</fullName>
        <label>Mileage Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msrp__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>odometer__c</fullName>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>MSRP Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>style__c</fullName>
        <label>Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transmission__c</fullName>
        <description>The transmission type for this vehicle.</description>
        <label>Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trim__c</fullName>
        <label>Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updated__c</fullName>
        <label>Source Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>uvc__c</fullName>
        <label>UVC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vin__c</fullName>
        <description>data to be replicated into the Vehicle VIN field</description>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zmake__c</fullName>
        <label>zMake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Make</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ztransmission__c</fullName>
        <label>zTransmission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Transmission</valueSetName>
        </valueSet>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>make__c</columns>
        <columns>model__c</columns>
        <columns>msrp__c</columns>
        <columns>style__c</columns>
        <columns>drivetrain__c</columns>
        <columns>engine_description__c</columns>
        <columns>fuel_type__c</columns>
        <columns>odometer__c</columns>
        <columns>mileage_cat__c</columns>
        <columns>class_name__c</columns>
        <columns>uvc__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vehicle_Is_Oversize__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Resolutions_Queue_Vehicle</fullName>
        <filterScope>Queue</filterScope>
        <label>Resolutions Queue</label>
        <queue>Resolutions_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Vehicle VIN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>One_Active_Price_Recommendation</fullName>
        <active>true</active>
        <description>Prevents there from being more than 1 active price recommendations per vehicle.</description>
        <errorConditionFormula>Count_of_Active_Pricing_Recommendations__c &gt; 1</errorConditionFormula>
        <errorMessage>You cannot create more than one active price recommendations per Vehicle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_if_Owner_is_ACV_Integration</fullName>
        <active>true</active>
        <description>Prevents edit of a vehicle record (except for system administrator) if the owner is ACV Integration</description>
        <errorConditionFormula>OwnerId = &apos;0050a00000HqbIlAAJ&apos;
&amp;&amp;
$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorMessage>Only System Administrator is permitted to modify a vehicle record owned by ACV Integration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vehicle_Name_VIN_not_editable</fullName>
        <active>true</active>
        <description>Prevents vehicle name from being changed by anyone except the System Admin</description>
        <errorConditionFormula>ISChanged(Name) 
&amp;&amp;
NOT( $Profile.Id = &apos;00ej0000000vxMN&apos;)</errorConditionFormula>
        <errorMessage>Editing the Vehicle Name (VIN) is not permitted.  Please contact a System Administrator.</errorMessage>
    </validationRules>
</CustomObject>